Fixing Accessibility Aspect - add manifest to index.html (cont. best practice aspect) - add image icons for manifest (cont. best practice aspect) - add nav - add alt to image - fix link id duplication due to undefined id - fix color contrast - fix font size

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,8 +4,8 @@ $fontFamily: 'Roboto', sans-serif, Arial;
 $fontSize: $baseline;
 $lineHeight: $baseline * 1.4;
 
-$color: #444;
-$primaryColor: #E3475E;
+$color: #222;
+$primaryColor: #DE3047;
 $lineColor: #eee;
 
 $navBarHeight: 50px;
